--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,21 @@
     <groupId>training.maven.quick</groupId>
     <artifactId>word-counter</artifactId>
     <version>1.0-SNAPSHOT</version>
+<properties>
+	<skipTests>false</skipTests>
+</properties>
+
 <dependencies>
 <dependency>
 <groupId>org.apache.commons</groupId>
 <artifactId>commons-lang3</artifactId>
 <version>3.7</version>
+</dependency>
+<dependency>
+<groupId>junit</groupId>
+<artifactId>junit</artifactId>
+<version>4.12</version>
+<scope>test</scope>
 </dependency>
 </dependencies>
 <build>
@@ -25,6 +35,25 @@
                 <target>1.7</target>
             </configuration>
         </plugin>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-surefire-plugin</artifactId>
+			<version>2.20.1</version>
+			<configuration>
+				<skipTests>${skipTests}</skipTests>
+			</configuration>
+		</plugin>
     </plugins>
 </build>
+
+<reporting>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-report-plugin</artifactId>
+            <version>2.18.1</version>
+        </plugin>
+    </plugins>
+</reporting>
+
 </project>
