--- a/pom.xml
+++ b/pom.xml
@@ -5,24 +5,24 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>training.maven.quick</groupId>
-    <artifactId>word-counter</artifactId>
+    <artifactId>word</artifactId>
     <version>1.0-SNAPSHOT</version>
 <properties>
 	<skipTests>false</skipTests>
 </properties>
 
 <dependencies>
-<dependency>
-<groupId>org.apache.commons</groupId>
-<artifactId>commons-lang3</artifactId>
-<version>3.7</version>
-</dependency>
-<dependency>
-<groupId>junit</groupId>
-<artifactId>junit</artifactId>
-<version>4.12</version>
-<scope>test</scope>
-</dependency>
+	<dependency>
+	<groupId>org.apache.commons</groupId>
+		<artifactId>commons-lang3</artifactId>
+		<version>3.7</version>
+	</dependency>
+	<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>4.12</version>
+		<scope>test</scope>
+	</dependency>
 </dependencies>
 <build>
     <plugins>
@@ -35,6 +35,7 @@
                 <target>1.7</target>
             </configuration>
         </plugin>
+      
 		<plugin>
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-surefire-plugin</artifactId>
